# quotes

./: .gitignore  README.md
backend/: Cargo.toml
backend/benches/: quotee_stats.rs
backend/migrations/: 001_initial.sql
backend/src/: account.rs  alias.rs  auth.rs  comment.rs  error.rs  lib.rs  main.rs  quote.rs  stats.rs  tag.rs  test.rs  user.rs  util.rs
frontend/: README.md  index.html  package-lock.json  package.json  todo.md
frontend/src/: App.vue  env.d.ts  main.ts
frontend/src/__test__/game/: mocks.ts  player.test.ts  scoring.test.ts
frontend/src/components/: BackgroundBlob.vue  Dropdown.vue  Modal.vue  Tabs.vue  ToastItem.vue  ToastWrap.vue  UserLink.vue
frontend/src/components/charts/: Bar.vue  Histogram.vue  Line.vue
frontend/src/components/comments/: CommentAlias.vue  CommentCreate.vue  CommentItem.vue  test.json
frontend/src/components/form/: InputCheckbox.vue  InputRadio.vue  InputSelect.vue  InputSwitch.vue  InputText.vue  InputTextarea.vue  Search.vue
frontend/src/components/game/: Fragment.vue  ModalGameEnd.vue  ModalRoundEnd.vue  Player.vue  PlayerIngame.vue
frontend/src/components/global/: Icon.vue  Spinner.vue
frontend/src/components/loading/: LoadingBar.vue
frontend/src/components/modal/: ModalSettings.vue  ModalTag.vue
frontend/src/components/navigation/: Header.vue  Sidebar.vue
frontend/src/components/statistics/: AuthorBreakdown.vue  LadderBreakdown.vue  QuoteeBreakdown.vue  RatioCell.vue  StatBreakdown.vue  StatCell.vue  StatYearBreakdown.vue  UserBreakdown.vue  YearBreakdown.vue  YearItem.vue
frontend/src/components/tags/: TagItem.vue
frontend/src/components/user/: UserPageItem.vue  UserQuote.vue
frontend/src/router/: index.ts
frontend/src/router/guards/: afterEach.ts  beforeResolve.ts
frontend/src/router/routes/: router-game.ts  router-main.ts  router-quote.ts  router-user.ts
frontend/src/router/views/: RouteAdmin.vue  RouteAuth.vue  RouteGame.vue  RouteGuess.vue  RouteHome.vue  RouteStatistics.vue  RouteUsers.vue
frontend/src/store/: create.ts  filters.ts  game.ts  loading.ts  quote.ts  statistics.ts  toast.ts  user.ts
frontend/src/style/: index.scss
frontend/src/style/app/: index.scss
frontend/src/style/generic/: _animation.scss  _button.scss  _dropdown.scss  _form.scss  _layout.scss  _tag.scss  _toast.scss  _tooltip.scss  index.scss
frontend/src/types/: comment-types.ts  game-types.ts  quote-types.ts  statistics-types.ts  user-types.ts
(+73 files in other folders)
