[package]
name = "quotes"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-only"

[dependencies]
dotenv = "0.15.0"
anyhow = "1.0.66"
thiserror = "1.0.37"
axum = { version = "0.6.1", features = ["multipart", "query", "headers"] }
tokio = { version = "1.23.0", features = ["fs", "rt", "macros", "rt-multi-thread"] }
tracing = "0.1.37"
tower-http = { version = "0.3.4", features = ["trace", "cors"] }
serde = { version = "1.0.149", features = ["derive"] }
serde_json = "1.0.89"
serde_rusqlite = "0.31.0"
tokio-rusqlite = { git = "https://github.com/programatik29/tokio-rusqlite" }
rusqlite = { version = "0.28.0", features = ["bundled"] }
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
time = { version = "0.3.17", features = ["parsing"] }
idlib = { "git" = "https://github.com/Mavulp/hiveID" }
futures = "0.3.25"
utoipa = { version = "2.4.2", features = ["axum_extras", "openapi_extensions"] }
utoipa-swagger-ui = { version = "3.0.1", features = ["axum"] }

[dependencies.rusqlite_migration]
git = "https://github.com/cljoly/rusqlite_migration"
