[package]
name = "quotes"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-only"

[dependencies]
dotenv = "0.15.0"
anyhow = "1.0.75"
thiserror = "1.0.50"
axum = { version = "0.6.20", features = ["multipart", "query", "headers"] }
tokio = { version = "1.35.0", features = ["fs", "rt", "macros", "rt-multi-thread"] }
tracing = "0.1.40"
tower-http = { version = "0.3.5", features = ["trace", "cors"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
serde_rusqlite = "0.34.0"
tokio-rusqlite = { git = "https://github.com/programatik29/tokio-rusqlite" }
rusqlite = { version = "0.30.0", features = ["bundled"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
time = { version = "0.3.30", features = ["parsing"] }
idlib = { "git" = "https://github.com/Mavulp/hiveID" }
futures = "0.3.29"
utoipa = { version = "3.5.0", features = ["axum_extras", "openapi_extensions"] }
utoipa-swagger-ui = { version = "3.1.5", features = ["axum"] }
itertools = "0.10.5"
unicase = "2.7.0"

[dependencies.rusqlite_migration]
git = "https://github.com/cljoly/rusqlite_migration"

[dev-dependencies]
criterion = { version = "0.3", features = ["async_tokio"] }

[[bench]]
name = "quotee_stats"
harness = false
